--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
   }
