--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.2",
     "google-auth-library": "^8.0.2",
     "gridfs-stream": "^1.1.1",
